# txtedit

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.mk  README.md  editor.h  main.c  main.h  postinstall.rtf  setup.iss
.github/workflows/: c-cpp.yml
data/: style.css
inc/: editor.h  main.h
inc/menubar/: file.h  help.h  menubar.h
menubar/: file.h  help.h  menubar.h
release/: innosetupwrap.bat  preinstall.rtf  setup.iss
src/: icon.rc  main.c
